zapoceo strukture podataka

--- a/jupyter-notebook/r_uvod.ipynb
+++ b/jupyter-notebook/r_uvod.ipynb
@@ -1648,6 +1648,116 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Strukture podataka su formati organiziranja, upravljanja i spremanja podataka koji omogućuju efikasno pristupanje podacima i njihovo modificiranje (https://en.wikipedia.org/wiki/Data_structure).\n",
+    "\n",
+    "Već smo se upoznali s jednim tipom strukture podataka u R-u, a to je vektor. R ima nekoliko osnovnih struktura podataka. Ovdje ćemo proći kroz one koje se najčešće javljaju.\n",
+    "\n",
+    "Za ponavljanje, stvorit ćemo novi vektor:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<ol class=list-inline>\n",
+       "\t<li>'vektor'</li>\n",
+       "\t<li>'od'</li>\n",
+       "\t<li>'4'</li>\n",
+       "\t<li>'elementa'</li>\n",
+       "</ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 'vektor'\n",
+       "\\item 'od'\n",
+       "\\item '4'\n",
+       "\\item 'elementa'\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 'vektor'\n",
+       "2. 'od'\n",
+       "3. '4'\n",
+       "4. 'elementa'\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] \"vektor\"   \"od\"       \"4\"        \"elementa\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "TRUE"
+      ],
+      "text/latex": [
+       "TRUE"
+      ],
+      "text/markdown": [
+       "TRUE"
+      ],
+      "text/plain": [
+       "[1] TRUE"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "TRUE"
+      ],
+      "text/latex": [
+       "TRUE"
+      ],
+      "text/markdown": [
+       "TRUE"
+      ],
+      "text/plain": [
+       "[1] TRUE"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "c('vektor', 'od', '4', 'elementa')\n",
+    "\n",
+    "# možemo provjeriti je li neki objekt vektor koristeći is.vector\n",
+    "is.vector(c('vektor', 'od', '4', 'elementa'))\n",
+    "\n",
+    "# funkcije za provjeravanje tipova varijabli možemo primijeniti i na vektore\n",
+    "is.character(c('vektor', 'od', '4', 'elementa'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### data.frame"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`data.frame` je vjerojatno najvažnija osnovna struktura (ili barem ona s kojom ćete se najčešće družiti). On odgovara onom što možemo vidjeti u *Data viewu* SPSS-a - sastoji se od redova koji predstavljaju opažanja/sudionike/caseove i stupaca koji predstavljaju varijable."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Reference\n",
     "\n",
     "Adler, J. (2012). *R in a nutshell: A desktop quick reference*, 2. izdanje. O'Reilly Media, Inc."
