dodao uvod.R za ljude i spin

--- a/jupyter-notebook/r_uvod.ipynb
+++ b/jupyter-notebook/r_uvod.ipynb
@@ -1190,7 +1190,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prihodi <- factor(c('srednji', 'niski', 'visoki', 'visoki', 'srednji'), ordered = T, levels = c('visoki', 'srednji', 'niski'))\n",
+    "prihodi <- factor(c('srednji', 'niski', 'visoki', 'visoki', 'srednji'),\n",
+    "                  ordered = T, levels = c('visoki', 'srednji', 'niski'))\n",
     "print(prihodi)\n",
     "str(prihodi)"
    ]
