započeo munge skriptu

--- a/jupyter-notebook/r_uvod.ipynb
+++ b/jupyter-notebook/r_uvod.ipynb
@@ -8,18 +8,7 @@
     }
    },
    "source": [
-    "# Rdionica: priprema datoteke `podaci_upitnik.csv`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## Uvod - osnove jezika R"
+    "# Uvod - osnove jezika R"
    ]
   },
   {
@@ -41,7 +30,7 @@
     }
    },
    "source": [
-    "### Osnovne matematičke operacije"
+    "## Osnovne matematičke operacije"
    ]
   },
   {
@@ -138,7 +127,7 @@
     }
    },
    "source": [
-    "### Funkcije"
+    "## Funkcije"
    ]
   },
   {
@@ -220,7 +209,7 @@
     }
    },
    "source": [
-    "### Varijable"
+    "## Varijable"
    ]
   },
   {
@@ -557,7 +546,7 @@
     }
    },
    "source": [
-    "#### Tipovi varijabli"
+    "### Tipovi varijabli"
    ]
   },
   {
@@ -825,7 +814,7 @@
     }
    },
    "source": [
-    "### Strukture podataka"
+    "## Strukture podataka"
    ]
   },
   {
@@ -875,7 +864,7 @@
     }
    },
    "source": [
-    "#### data.frame"
+    "### data.frame"
    ]
   },
   {
@@ -1200,6 +1189,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "U kodu gore, `ordered` i `levels` su imenovani (named) argumenti. Imenovani argumenti se razlikuju od pozicijskih (eng. *positional*) po tome što nije bitno kojim ih redoslijedom postavljamo. Isti efekt dobili bismo da smo prvo napisali `levels`, a potom `ordered`.\n",
+    "\n",
+    "Nekad se možemo izvući bez da argumente imenujemo, ali nekad će R baciti error, tako da tu razliku treba imati na umu."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Sad kad smo se upoznali s faktorima, prijeći ćemo na liste."
    ]
   },
@@ -1207,7 +1205,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### list"
+    "### list"
    ]
   },
   {
@@ -1527,7 +1525,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### matrix"
+    "### matrix"
    ]
   },
   {
