--- a/jupyter-notebook/priprema_podaci_upitnik.ipynb
+++ b/jupyter-notebook/priprema_podaci_upitnik.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1152,7 +1152,7 @@
     "- `starts_with`, koja odabire varijable koje počinju s određenim stringom\n",
     "- `ends_with`, isto, samo za kraj\n",
     "- `one_of`, koju treba koristiti kad `selectu` dajemo `character` vektor\n",
-    "- `matches`, koji nas uvodi u digresiju o regularnim izrazima!"
+    "- `matches`, koji nam omogućava da odaberemo varijable čija imena odgovaraju nekom **regularnom izrazu**"
    ]
   },
   {
@@ -1160,6 +1160,316 @@
    "metadata": {},
    "source": [
     "## Regularni izrazi"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Regularni izrazi (eng. *regular expressions*, *regex* ili *regexp*) su stringovi koji označavaju neki uzorak za pretraživanje. Na primjer, sve ove izraze\n",
+    "```\n",
+    "string\n",
+    "striing\n",
+    "striiing\n",
+    "striiiiiiiiiiiiiiiiing\n",
+    "```\n",
+    "možemo opisati stringom `stri*ng`. Znak `*` (asterisk) je **kvantifikator** koji označava *nula ili više ponavljanja prethodnog znaka*. To znači da bi taj regularni izraz pronašao i string `strng`.\n",
+    "\n",
+    "Uz razne kvantifikatore, postoje još i klase znakova te meta-znakovi koji nam omogućavaju lako pretraživanje stringova.\n",
+    "\n",
+    "Regexi su implementirani u base R-u (npr. funkcije `grep` i `grepl`) i u `tidyverseu` kroz paket `stringr`. Mi ćemo se baviti `stringrom`. Budući da postoje razne implementacije regularnih izraza, koje se razlikuju po kompleksnosti, bitno je znati da `stringr` koristi **Perl/PCRE** regularne izraze.\n",
+    "\n",
+    "U ovom dijelu ćemo pogledati osnove regularnih izraza, koje ćemo nadograđivati kroz ostatak radionice."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Kvantifikatori"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### *"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Kao što je već rečeno, `*` označava **0 ili više** ponavljanja **znaka** koji mu prethodi. *Znak* se ovdje odnosi na doslovni znak, na klasu znakova ili na grupu znakova. S klasama i grupama ćemo se upoznati malo kasnije.\n",
+    "\n",
+    "Pogledat ćemo output funkcije `str_detect` koja kao input uzima string (ili više njih) i regularni izraz (`pattern`), a vraća `TRUE` ili `FALSE` ovisno o tome nalazi li se regularni izraz u stringu ili ne."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] TRUE TRUE TRUE\n"
+     ]
+    }
+   ],
+   "source": [
+    "stringr::str_detect(string = qc(kobilaaaa, maajka, celer), pattern = 'a*') %>% print"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### +"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`+` označava **jedno (1) ili više ponavljanja prethodnog znaka/klase znakova/grupe znakova.\n",
+    "\n",
+    "Pogledat ćemo što će nam vratiti funkcija `str_extract_all` koja prima iste argumente kao i `str_detect`, a vraća sve pronađene `patterne`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1]]\n",
+      "[1] \"aaaa\"\n",
+      "\n",
+      "[[2]]\n",
+      "[1] \"aa\" \"a\" \n",
+      "\n",
+      "[[3]]\n",
+      "character(0)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "stringr::str_extract_all(string = qc(kobilaaaa, maajka, celer), pattern = 'a+') %>% print"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Postoji i funkcija `str_extract` koja vraća **samo prvi** pronađeni uzorak."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] \"aaaa\" \"aa\"   NA    \n"
+     ]
+    }
+   ],
+   "source": [
+    "stringr::str_extract(qc(kobilaaaa, maajka, celer), 'a+') %>% print"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Također, možemo vidjeti da `str_detect` više ne vraća `TRUE` za posljednju riječ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1]  TRUE  TRUE FALSE\n"
+     ]
+    }
+   ],
+   "source": [
+    "stringr::str_detect(qc(kobilaaaa, maajka, celer), 'a+') %>% print"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### ?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Upitnik označavao **0 ili jedno (1)** ponavljanje."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1]]\n",
+      " [1] \"\"  \"\"  \"\"  \"\"  \"\"  \"a\" \"a\" \"a\" \"a\" \"\" \n",
+      "\n",
+      "[[2]]\n",
+      "[1] \"\"  \"a\" \"a\" \"\"  \"\"  \"a\" \"\" \n",
+      "\n",
+      "[[3]]\n",
+      "[1] \"\" \"\" \"\" \"\" \"\" \"\"\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "qc(kobilaaaa, maajka, celer) %>%\n",
+    "stringr::str_extract_all(., 'a?') %>%\n",
+    "print"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### {n,m}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ova sintaksa nam omogućava da specificiramo koliko ponavljanja želimo. Postoje tri valjane kombinacije:\n",
+    "- `{n,m}` znači od `n` do `m`\n",
+    "- `{n,}` znači `n` ili više\n",
+    "- `{n}` znači točno `n`\n",
+    "\n",
+    "`{,m}` **nije valjan** regularni izraz! Također, bitno je da nema razmaka između `n` ili `m` i zareza."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Budući da je ovo posljednji kvantifikator, vratit ćemo se na početni primjer."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1]]\n",
+      "character(0)\n",
+      "\n",
+      "[[2]]\n",
+      "[1] \"ii\"\n",
+      "\n",
+      "[[3]]\n",
+      "[1] \"iii\"\n",
+      "\n",
+      "[[4]]\n",
+      "[1] \"iiiii\" \"iiiii\" \"iiiii\" \"ii\"   \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "qc(string, striing, striiing, striiiiiiiiiiiiiiiiing) %>%\n",
+    "stringr::str_extract_all(., 'i{2,5}') %>% print"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1]]\n",
+      "character(0)\n",
+      "\n",
+      "[[2]]\n",
+      "character(0)\n",
+      "\n",
+      "[[3]]\n",
+      "[1] \"iii\"\n",
+      "\n",
+      "[[4]]\n",
+      "[1] \"iiiiiiiiiiiiiiiii\"\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "qc(string, striing, striiing, striiiiiiiiiiiiiiiiing) %>%\n",
+    "stringr::str_extract_all(., 'i{3,}') %>% print"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1]]\n",
+      "character(0)\n",
+      "\n",
+      "[[2]]\n",
+      "character(0)\n",
+      "\n",
+      "[[3]]\n",
+      "character(0)\n",
+      "\n",
+      "[[4]]\n",
+      "[1] \"iiiiiiiiiiiiiiiii\"\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "qc(string, striing, striiing, striiiiiiiiiiiiiiiiing) %>%\n",
+    "stringr::str_extract_all(., 'i{17}') %>% print"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Klase znakova"
    ]
   },
   {
@@ -1177,7 +1487,13 @@
     "\n",
     "Pipe\n",
     "- https://cran.r-project.org/web/packages/magrittr/vignettes/magrittr.html\n",
-    "- http://r4ds.had.co.nz/pipes.html"
+    "- http://r4ds.had.co.nz/pipes.html\n",
+    "\n",
+    "Regularni izrazi\n",
+    "- [jako dobar šalabahter](https://remram44.github.io/regex-cheatsheet/regex.html)\n",
+    "- [još jedan](http://www.rexegg.com/regex-quickstart.html)\n",
+    "- [stranica koja omogućuje isprobavanje različitih uzoraka na tekstu](https://regexr.com/)\n",
+    "- [uvod u `stringr`](https://cran.r-project.org/web/packages/stringr/vignettes/stringr.html)"
    ]
   },
   {
