nastavak regexa, klase znakova

--- a/jupyter-notebook/priprema_podaci_upitnik.ipynb
+++ b/jupyter-notebook/priprema_podaci_upitnik.ipynb
@@ -1233,7 +1233,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`+` označava **jedno (1) ili više ponavljanja prethodnog znaka/klase znakova/grupe znakova.\n",
+    "`+` označava **jedno (1) ili više** ponavljanja prethodnog znaka/klase znakova/grupe znakova.\n",
     "\n",
     "Pogledat ćemo što će nam vratiti funkcija `str_extract_all` koja prima iste argumente kao i `str_detect`, a vraća sve pronađene `patterne`."
    ]
@@ -1470,6 +1470,250 @@
    "metadata": {},
    "source": [
     "### Klase znakova"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pretraživanja koja smo dosad vidjeli su jednostavna i jako umjetna. U stvarnim primjenama uglavnom nećemo pokušavati uhvatiti jedno slovo, nego znakove određenog tipa (kao što su brojke) ili određene skupine znakova (npr. brojeve 1, 7 ili 5). U te svrhe, koristimo **klase znakova**.\n",
+    "\n",
+    "NB: Klase znakova predstavljaju više mogućih znakova, ali **samo jedno mjesto**.\n",
+    "\n",
+    "Napravit ćemo mali `data.frame` koji se sastoji od dva stupca koja sadrže stringove."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ne možemo koristiti qc za mjesta zbog razmaka\n",
+    "data.frame(mjesta = c('Slavonski Brod', 'BJELOVAR', 'Cista Provo', 'Banova Jaruga'),\n",
+    "           tablice = qc(SB1152KF, BJ302LD, CP999LO, BN2001KA)) -> registracije"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Za početak, pokušat ćemo pronaći sve unose koji se sastoje od dvije riječi (to znači da ćemo isključiti BJELOVAR `:(`). Vidimo da sva mjesta koja se sastoje od dvije riječi imaju sljedeći uzorak: `[veliko slovo][nekoliko malih slova][razmak][veliko slovo][nekoliko malih slova]`. Koristeći regexe, možemo napraviti sljedeće:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<ol class=list-inline>\n",
+       "\t<li>TRUE</li>\n",
+       "\t<li>FALSE</li>\n",
+       "\t<li>TRUE</li>\n",
+       "\t<li>TRUE</li>\n",
+       "</ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item TRUE\n",
+       "\\item FALSE\n",
+       "\\item TRUE\n",
+       "\\item TRUE\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. TRUE\n",
+       "2. FALSE\n",
+       "3. TRUE\n",
+       "4. TRUE\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1]  TRUE FALSE  TRUE  TRUE"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "registracije$mjesta %>%\n",
+    "stringr::str_detect(., '^[[:upper:]][[:lower:]]+\\\\s[[:upper:]][[:lower:]]+')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`^` (eng. *caret*) je meta-znak koji označava **početak stringa**. `[[:upper:]]` i `[[:lower:]]` su klase koje označavaju velika odnosno mala slova. `\\\\s` označava razmak (ostavljanje praznog mjesta također funkcionira). Dakle, obrazac koji tražimo mora počinjati s velikim slovom kojem slijedi jedno ili više malih slova.\n",
+    "\n",
+    "Drugi važan meta-znak je `$`, koji označava **kraj stringa**.\n",
+    "\n",
+    "NB: Ako želimo tražiti same meta-znakove (npr. u `$1551`), ispred njih moramo staviti `\\\\` (backslash x 2). Taj čin se zove *escaping*."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<ol class=list-inline>\n",
+       "\t<li>TRUE</li>\n",
+       "\t<li>FALSE</li>\n",
+       "</ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item TRUE\n",
+       "\\item FALSE\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. TRUE\n",
+       "2. FALSE\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1]  TRUE FALSE"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "c('$alaj', '€broj') %>%\n",
+    "stringr::str_detect(., '\\\\$')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Koristeći uglate zagrade, možemo sami definirati klasu znakova koja je prihvatljiva na nekom mjestu. Na primjer, možemo tražiti sva mjesta koja imaju dvije riječi i čija prva riječ počinje slovom B (velikim!) ili S (također!). Ovdje ćemo koristiti `str_subset`, koja vraća stringove koji sadrže zadani obrazac."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<ol class=list-inline>\n",
+       "\t<li>'Slavonski Brod'</li>\n",
+       "\t<li>'Banova Jaruga'</li>\n",
+       "</ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 'Slavonski Brod'\n",
+       "\\item 'Banova Jaruga'\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 'Slavonski Brod'\n",
+       "2. 'Banova Jaruga'\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] \"Slavonski Brod\" \"Banova Jaruga\" "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "registracije$mjesta %>%\n",
+    "stringr::str_subset(., '^[SB][[:lower:]]+\\\\s[[:upper:]][[:lower:]]+')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Možemo definirati i custom klasu znakova koji se **ne smiju** nalaziti na nekom mjestu. To radimo tako da na početak svoje klase stavimo znak `^` (`[^...]`). Na primjer, možemo tražiti stringove koji imaju dvije riječi, a čija prva riječ ne počinje slovom S ili B:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "'Cista Provo'"
+      ],
+      "text/latex": [
+       "'Cista Provo'"
+      ],
+      "text/markdown": [
+       "'Cista Provo'"
+      ],
+      "text/plain": [
+       "[1] \"Cista Provo\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "registracije$mjesta %>%\n",
+    "stringr::str_subset(., '^[^SB][[:lower:]]+\\\\s[[:upper:]][[:lower:]]+')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<ol class=list-inline>\n",
+       "\t<li>'Slavonski Brod'</li>\n",
+       "\t<li>'Cista Provo'</li>\n",
+       "\t<li>'Banova Jaruga'</li>\n",
+       "</ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 'Slavonski Brod'\n",
+       "\\item 'Cista Provo'\n",
+       "\\item 'Banova Jaruga'\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 'Slavonski Brod'\n",
+       "2. 'Cista Provo'\n",
+       "3. 'Banova Jaruga'\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] \"Slavonski Brod\" \"Cista Provo\"    \"Banova Jaruga\" "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "registracije$mjesta %>%\n",
+    "stringr::str_subset(., '(^[[:upper:]][[:lower:]]+\\\\s?)+')"
    ]
   },
   {
