--- a/jupyter-notebook/priprema_podaci_upitnik.ipynb
+++ b/jupyter-notebook/priprema_podaci_upitnik.ipynb
@@ -35,8 +35,12 @@
    },
    "outputs": [],
    "source": [
-    "install.packages(c('janitor', 'psych', 'here', 'wrapr', 'conflicted', 'DataExplorer',\n",
-    "                  'naniar', 'visdat', 'skimr'))"
+    "install.packages(c('tidyverse', 'magrittr', 'here',\n",
+    "                   'wrapr', 'conflicted', 'foreign',\n",
+    "                   # ovi paketi nisu učitani tijekom ovog\n",
+    "                   # dijela radionice:\n",
+    "                   'DataExplorer', 'naniar', 'visdat',\n",
+    "                   'skimr', 'janitor', 'psych'))"
    ]
   },
   {
@@ -110,9 +114,7 @@
     "library(wrapr)\n",
     "\n",
     "# olakšava korištenje relativnih file pathova\n",
-    "library(here)\n",
-    "\n",
-    "# upoznavanje s podacima"
+    "library(here)"
    ]
   },
   {
@@ -260,6 +262,28 @@
     }
    },
    "source": [
+    "Funkcija `here` konstruira relativni put do datoteke `podaci_upitnik.csv`, koji kreće od *root* foldera, a koji je označen prisustvom prazne datoteke imena `.here`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "To je jedan od načina koji osigurava reporudicilnost obrada pri prijenosu koda s jednog računala na drugo i lišava nas muke ručnog mijenjanja puteva do datoteka. Isto postižemo stvaranjem projekta u RStudiju. Osim na datoteku `.here`, funkcija `here` reagira i na datoteke sa sufiksom `.Rproj` (a koje nastaju pri stvaranju RStudio projekta."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "Poruka koju dobivamo obavještava nas o tome kako su određene varijable reprezentirane. Vidimo da su varijable koje počinju s `pi` reprezentirane kao `character`. Ako pozovemo funkciju `spec`, vidjet ćemo specifikacije svih varijabli."
    ]
   },
@@ -296,6 +320,17 @@
    },
    "source": [
     "Obrisat ćemo specifikacije varijabli da ne zakrčuju output."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "`attr` nam omogućuje da pristupimo raznim **atributima** objekata u R-u. Ovdje, dakle, pristupamo atributu `spec` objekta `podaci`, te ga brišemo upisujući vrijednost `NULL`."
    ]
   },
   {
@@ -452,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +496,7 @@
      "text": [
       "Skim summary statistics\n",
       " n obs: 100 \n",
-      " n variables: 5 \n",
+      " n variables: 6 \n",
       "\n",
       "── Variable type:factor ────────────────────────────────────────────────────────\n",
       "     variable missing complete   n n_unique                         top_counts\n",
@@ -474,9 +509,11 @@
       "── Variable type:integer ───────────────────────────────────────────────────────\n",
       "            variable missing complete   n mean   sd p0 p25 p50 p75 p100\n",
       " attitudesAndNorms01       0      100 100 5.04 1.43  2   4   5   6    8\n",
+      " attitudesAndNorms02       0      100 100 3.22 2.03 -2   2   3   5    7\n",
       " attitudesAndNorms03       0      100 100 3.06 1.88 -2   2   3   4    8\n",
       "     hist\n",
       " ▁▃▅▇▁▇▃▁\n",
+      " ▂▂▃▇▇▇▆▆\n",
       " ▁▁▁▇▂▂▁▁\n",
       "\n",
       "── Variable type:numeric ───────────────────────────────────────────────────────\n",
@@ -487,8 +524,8 @@
    ],
    "source": [
     "print(skimr::skim(podaci[, qc(pi_education, attitudesAndNorms01,\n",
-    "                              attitudesAndNorms03, mf_CareHarm,\n",
-    "                              pi_income)]))"
+    "                              attitudesAndNorms02, attitudesAndNorms03,\n",
+    "                              mf_CareHarm, pi_income)]))"
    ]
   },
   {
@@ -504,16 +541,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<thead><tr><th></th><th scope=col>vars</th><th scope=col>n</th><th scope=col>mean</th><th scope=col>sd</th><th scope=col>median</th><th scope=col>trimmed</th><th scope=col>mad</th><th scope=col>min</th><th scope=col>max</th><th scope=col>range</th><th scope=col>skew</th><th scope=col>kurtosis</th><th scope=col>se</th></tr></thead>\n",
+       "<tbody>\n",
+       "\t<tr><th scope=row>attitudesAndNorms01</th><td>1          </td><td>100        </td><td>5.040000   </td><td>1.4278613  </td><td>5.0        </td><td>5.062500   </td><td>1.4826     </td><td> 2.000000  </td><td>8          </td><td> 6.000000  </td><td>-0.19314719</td><td>-0.5916736 </td><td>0.14278613 </td></tr>\n",
+       "\t<tr><th scope=row>attitudesAndNorms02</th><td>2          </td><td>100        </td><td>3.220000   </td><td>2.0279860  </td><td>3.0        </td><td>3.275000   </td><td>1.4826     </td><td>-2.000000  </td><td>7          </td><td> 9.000000  </td><td>-0.16760327</td><td>-0.4693100 </td><td>0.20279860 </td></tr>\n",
+       "\t<tr><th scope=row>attitudesAndNorms03</th><td>3          </td><td>100        </td><td>3.060000   </td><td>1.8846536  </td><td>3.0        </td><td>3.050000   </td><td>1.4826     </td><td>-2.000000  </td><td>8          </td><td>10.000000  </td><td> 0.02193442</td><td> 0.1236832 </td><td>0.18846536 </td></tr>\n",
+       "\t<tr><th scope=row>mf_CareHarm</th><td>4          </td><td>100        </td><td>3.543333   </td><td>0.6381177  </td><td>3.5        </td><td>3.522917   </td><td>0.4942     </td><td> 2.166667  </td><td>5          </td><td> 2.833333  </td><td> 0.25163049</td><td>-0.3440728 </td><td>0.06381177 </td></tr>\n",
+       "\t<tr><th scope=row>pi_income*</th><td>5          </td><td>100        </td><td>3.300000   </td><td>1.1236664  </td><td>4.0        </td><td>3.362500   </td><td>1.4826     </td><td> 1.000000  </td><td>5          </td><td> 4.000000  </td><td>-0.55822972</td><td>-0.7121800 </td><td>0.11236664 </td></tr>\n",
+       "\t<tr><th scope=row>pi_education*</th><td>6          </td><td>100        </td><td>4.100000   </td><td>1.6545011  </td><td>5.0        </td><td>4.137500   </td><td>1.4826     </td><td> 1.000000  </td><td>6          </td><td> 5.000000  </td><td>-0.09141116</td><td>-1.6597342 </td><td>0.16545011 </td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{r|lllllllllllll}\n",
+       "  & vars & n & mean & sd & median & trimmed & mad & min & max & range & skew & kurtosis & se\\\\\n",
+       "\\hline\n",
+       "\tattitudesAndNorms01 & 1           & 100         & 5.040000    & 1.4278613   & 5.0         & 5.062500    & 1.4826      &  2.000000   & 8           &  6.000000   & -0.19314719 & -0.5916736  & 0.14278613 \\\\\n",
+       "\tattitudesAndNorms02 & 2           & 100         & 3.220000    & 2.0279860   & 3.0         & 3.275000    & 1.4826      & -2.000000   & 7           &  9.000000   & -0.16760327 & -0.4693100  & 0.20279860 \\\\\n",
+       "\tattitudesAndNorms03 & 3           & 100         & 3.060000    & 1.8846536   & 3.0         & 3.050000    & 1.4826      & -2.000000   & 8           & 10.000000   &  0.02193442 &  0.1236832  & 0.18846536 \\\\\n",
+       "\tmf\\_CareHarm & 4           & 100         & 3.543333    & 0.6381177   & 3.5         & 3.522917    & 0.4942      &  2.166667   & 5           &  2.833333   &  0.25163049 & -0.3440728  & 0.06381177 \\\\\n",
+       "\tpi\\_income* & 5           & 100         & 3.300000    & 1.1236664   & 4.0         & 3.362500    & 1.4826      &  1.000000   & 5           &  4.000000   & -0.55822972 & -0.7121800  & 0.11236664 \\\\\n",
+       "\tpi\\_education* & 6           & 100         & 4.100000    & 1.6545011   & 5.0         & 4.137500    & 1.4826      &  1.000000   & 6           &  5.000000   & -0.09141116 & -1.6597342  & 0.16545011 \\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "| <!--/--> | vars | n | mean | sd | median | trimmed | mad | min | max | range | skew | kurtosis | se | \n",
+       "|---|---|---|---|---|---|\n",
+       "| attitudesAndNorms01 | 1           | 100         | 5.040000    | 1.4278613   | 5.0         | 5.062500    | 1.4826      |  2.000000   | 8           |  6.000000   | -0.19314719 | -0.5916736  | 0.14278613  | \n",
+       "| attitudesAndNorms02 | 2           | 100         | 3.220000    | 2.0279860   | 3.0         | 3.275000    | 1.4826      | -2.000000   | 7           |  9.000000   | -0.16760327 | -0.4693100  | 0.20279860  | \n",
+       "| attitudesAndNorms03 | 3           | 100         | 3.060000    | 1.8846536   | 3.0         | 3.050000    | 1.4826      | -2.000000   | 8           | 10.000000   |  0.02193442 |  0.1236832  | 0.18846536  | \n",
+       "| mf_CareHarm | 4           | 100         | 3.543333    | 0.6381177   | 3.5         | 3.522917    | 0.4942      |  2.166667   | 5           |  2.833333   |  0.25163049 | -0.3440728  | 0.06381177  | \n",
+       "| pi_income* | 5           | 100         | 3.300000    | 1.1236664   | 4.0         | 3.362500    | 1.4826      |  1.000000   | 5           |  4.000000   | -0.55822972 | -0.7121800  | 0.11236664  | \n",
+       "| pi_education* | 6           | 100         | 4.100000    | 1.6545011   | 5.0         | 4.137500    | 1.4826      |  1.000000   | 6           |  5.000000   | -0.09141116 | -1.6597342  | 0.16545011  | \n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "                    vars n   mean     sd        median trimmed  mad   \n",
+       "attitudesAndNorms01 1    100 5.040000 1.4278613 5.0    5.062500 1.4826\n",
+       "attitudesAndNorms02 2    100 3.220000 2.0279860 3.0    3.275000 1.4826\n",
+       "attitudesAndNorms03 3    100 3.060000 1.8846536 3.0    3.050000 1.4826\n",
+       "mf_CareHarm         4    100 3.543333 0.6381177 3.5    3.522917 0.4942\n",
+       "pi_income*          5    100 3.300000 1.1236664 4.0    3.362500 1.4826\n",
+       "pi_education*       6    100 4.100000 1.6545011 5.0    4.137500 1.4826\n",
+       "                    min       max range     skew        kurtosis   se        \n",
+       "attitudesAndNorms01  2.000000 8    6.000000 -0.19314719 -0.5916736 0.14278613\n",
+       "attitudesAndNorms02 -2.000000 7    9.000000 -0.16760327 -0.4693100 0.20279860\n",
+       "attitudesAndNorms03 -2.000000 8   10.000000  0.02193442  0.1236832 0.18846536\n",
+       "mf_CareHarm          2.166667 5    2.833333  0.25163049 -0.3440728 0.06381177\n",
+       "pi_income*           1.000000 5    4.000000 -0.55822972 -0.7121800 0.11236664\n",
+       "pi_education*        1.000000 6    5.000000 -0.09141116 -1.6597342 0.16545011"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "podaci %>%\n",
-    "dplyr::select(attitudesAndNorms01, pi_education, pi_gender) %>%\n",
+    "dplyr::select(attitudesAndNorms01:attitudesAndNorms03,\n",
+    "              mf_CareHarm, pi_income, pi_education) %>%\n",
     "psych::describe(.)"
    ]
   },
