--- a/jupyter-notebook/priprema_podaci_upitnik.ipynb
+++ b/jupyter-notebook/priprema_podaci_upitnik.ipynb
@@ -3903,7 +3903,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "naniar::gg_miss_var(podaci_na)"
+    "podaci_na %>%\n",
+    "dplyr::select(1:15) %>%\n",
+    "naniar::gg_miss_var(.)"
    ]
   },
   {
